// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Layout renders successfully 1`] = `
<body>
  <div>
    <div>
      <a
        class="makeStyles-link-1"
        href="/"
      >
        Home
      </a>
      <a
        class="makeStyles-link-1"
        href="/about"
      >
        About
      </a>
    </div>
  </div>
</body>
`;

exports[`components/Layout renders successfully with title 1`] = `
<body>
  <div>
    <div>
      <a
        class="makeStyles-link-2"
        href="/"
      >
        Home
      </a>
      <a
        class="makeStyles-link-2"
        href="/about"
      >
        About
      </a>
    </div>
  </div>
</body>
`;
